<resources>
    <string name="app_name">CourseBack</string>
    <string name="title_activity_settings">Sign In</string>

    <!-- Resource Keys -->
    <string name="facebook_id">687480368056541</string>
    <string name="firebase_secret">9JvNoIVqYs2fqJVgGWEfA3E8toHtsELUFBBaaIrO</string>

    <!-- Action Buttons -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>

    <!-- Book cell labels -->
    <string name="default_price">$--.--</string>
    <string name="default_book_title">--</string>
    <string name="default_course_title">--- ---</string>

    <!-- Add Book Strings -->
    <string name="add_book">Add Book</string>
    <string name="title">title</string>
    <string name="isbn">isbn</string>
    <string name="price">price</string>
    <string name="edition">edition</string>
    <string name="condition">condition</string>
    <string name="annotation">level of annotation</string>
    <string-array name="conditions_array">
        <item>New</item>
        <item>Good</item>
        <item>Fair</item>
        <item>Poor</item>
    </string-array>
    <string-array name="annotations_array">
        <item>Heavy</item>
        <item>Medium</item>
        <item>Light</item>
        <item>None</item>
    </string-array>
    <string name="book_saved">Book uploaded successfully</string>
    <string name="book_failure">Failed to upload book</string>

    <!-- SignIn Screen -->
    <string name="fb_login">Login with Facebook</string>
    <string name="null_user">Login failed</string>
    <string name="sign_in_error">error signing in</string>

    <!-- NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_icon_description">NavDrawer opener</string>

    <!-- Titles for list in NavDrawer -->
    <string-array name="nav_drawer_list">
        <item>Marketplace</item>
        <item>My Library</item>
        <item>Saved Books</item>
        <item>Payment History</item>
    </string-array>


</resources>
