<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_book_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/add_book"
        android:textColor="@android:color/white"
        android:textSize="@dimen/book_cell_font_size"
        android:gravity="center"
        android:background="@color/green"/>

    <EditText
        android:id="@+id/add_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_book_header"
        android:hint="@string/title"
        android:inputType="textCapWords"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>

    <EditText
        android:id="@+id/add_book_isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_book_title"
        android:inputType="number"
        android:hint="@string/isbn"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>

    <EditText
        android:id="@+id/add_book_edition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_book_isbn"
        android:inputType="number"
        android:hint="@string/edition"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>

    <EditText
        android:id="@+id/add_book_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_book_edition"
        android:inputType="textCapWords"
        android:hint="@string/course"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>

    <EditText
        android:id="@+id/add_book_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_book_course"
        android:inputType="numberDecimal"
        android:hint="@string/price"
        android:paddingLeft="@dimen/activity_horizontal_margin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:id="@+id/add_book_image"
        android:layout_below="@+id/add_book_price"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>