<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/book_cell_top_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_cell_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/default_book_title"
            android:textStyle="bold"
            android:textSize="@dimen/book_cell_font_size" />

        <TextView
            android:id="@+id/book_cell_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_price"
            android:textStyle="bold"
            android:textSize="@dimen/book_cell_font_size"
            android:gravity="right"
            android:textColor="@android:color/holo_green_light"/>
    </LinearLayout>

    <TextView
        android:id="@+id/book_cell_course"
        android:layout_below="@id/book_cell_top_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_course_title"/>

    <ImageView
        android:id="@+id/book_cell_image"
        android:layout_below="@id/book_cell_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>